--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,15 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.6",
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-gifted-chat": "^2.4.0"
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
