--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,9 @@
 {
   "expo": {
-    "name": "client",
-    "slug": "client",
+    "name": "AI Chat App",
+    "slug": "aiChatApp",
+    "privacy": "public",
+    "description": "This is an AI Chat App built with React Native",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.jennn.aiChatApp"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +28,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7f24c897-18a5-4cd8-adf8-bdfbe3c87c78"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/7f24c897-18a5-4cd8-adf8-bdfbe3c87c78"
     }
   }
 }
