--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.6",
     "prettier": "^2.8.8",
